Fix CSS but not responsive

--- a/Content/css/login.css
+++ b/Content/css/login.css
@@ -32,26 +32,6 @@ img {
     display: block;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: 'Rubik', sans-serif;
-}
-
-a,
-p,
-span,
-button,
-textarea,
-input,
-select,
-option {
-    font-family: 'Mitr', sans-serif;
-}
-
     input,
     textarea,
     button:focus {
